<resources>
    <string name="app_name">Adopta Amor</string>
    <string name="todos">Ver todos</string>
    <string name="por_raza">Ver por raza</string>
    <string name="por_edad">Ver por edad</string>
    <string name="por_color">Ver por color de pelaje</string>
    <string name="por_estado">Ver por estado</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="me_interesa">Me Interesa</string>
    <string name="contactanos">Contactanos</string>
    <string name="title_activity_perros">PerrosActivity</string>
    <string name="title_activity_gatos">GatosActivity</string>
    <string name="text_boton_perros"></string>
    <string name="text_boton_gatos"></string>
    <string name="title_activity_tipo">TipoActivity</string>
    <string name="title_activity_mi_futura_mascota">MiFuturaMascota</string>
    <string name="title_activity_datos_usuario">DatosUsuarioActivity</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="correo">Correo</string>
    <string name="estado">Estado</string>
    <string name="ciudad">Ciudad</string>
    <string name="colonia">colonia</string>
    <string name="calle">Calle</string>
    <string name="numero">Número</string>
    <string name="comentarios">Comentarios</string>
    <string name="enviar_btn">Enviar Datos</string>
    <string name="title_activity_mascota">MascotaActivity</string>
    <string name="alert_dialog_ok">Iniciar</string>
    <string name="alert_dialog_cancel">Cancelar</string>
    <string name="mensaje">Bienvenido!! \\n Esta APP te facilitará obtener una mascota, así como también podrás ayudar a las mascotas que habitan en la calle a encontrar un hogar</string>
    <string name="spalshScreen">Bienvenido!!</string>
    <string name="title_activity_razas">Por Razas</string>
    <string name="ayudar_Mascota">Ayudar una mascota</string>
    <string name="title_activity_ayuda_mascota">AyudaMascotaActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>